--- a/services/QuillLMS/app/assets/stylesheets/pages/student_dashboard/student_profile_unit.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/student_dashboard/student_profile_unit.scss
@@ -68,4 +68,54 @@
       }
     }
   }
+  @media (max-width: 991px) {
+    .tool-icon-section, .completed-due-date-section {
+      display: none;
+    }
+    .name-section {
+      flex: 3;
+    }
+    .due-date-section {
+      flex: 1;
+    }
+    .action-button-section {
+      flex: 1;
+    }
+    .score-section {
+      flex: 1.5;
+    }
+    .data-table-headers, .data-table-header, .data-table-row, .data-table-row-section {
+      min-width: auto !important;
+    }
+    .data-table-row {
+      flex-wrap: wrap;
+    }
+  }
+  @media (max-width: 682px) {
+    .name-section {
+      white-space: normal;
+    }
+    .data-table-row {
+      padding: 16px 0px !important;
+      min-height: 108px;
+    }
+    .data-table-row-section.action-button-section {
+      flex: 1 0 100%;
+      justify-content: flex-start;
+      margin-top: 12px;
+    }
+    .data-table-header.action-button-section {
+      display: none !important;
+    }
+    .score-section {
+      overflow: visible;
+      .score {
+        position: relative;
+        span {
+          position: absolute;
+          top: 32px;
+        }
+      }
+    }
+  }
 }
